@@ -12,10 +12,10 @@ import java.util.Base64;
 import java.util.List;
 import java.util.UUID;
 import org.springframework.data.domain.Page;
-import org.springframework.lang.NonNull;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
 import org.springframework.http.ResponseEntity;
+import org.springframework.lang.NonNull;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
@@ -58,7 +58,7 @@ public class TenantController {
               .map(TenantDto::from)
               .toList();
       boolean hasMore = items.size() == limit;
-      String nextCursor = hasMore ? encodeCursor(items.get(items.size() - 1).createdAt()) : null;
+      String nextCursor = hasMore ? encodeCursor(items.getLast().createdAt()) : null;
       return ResponseEntity.ok(new CursorPage<>(items, nextCursor, hasMore));
     }
 
@@ -76,7 +76,8 @@ public class TenantController {
   }
 
   @PatchMapping("/{id}")
-  public ResponseEntity<?> update(@PathVariable @NonNull UUID id, @RequestBody UpdateTenantRequest request) {
+  public ResponseEntity<?> update(
+      @PathVariable @NonNull UUID id, @RequestBody UpdateTenantRequest request) {
     AbacResult abac = abacEvaluator.evaluate(AbacContext.fromCurrentContext("tenants:write"));
     if (!abac.allowed())
       return ResponseEntity.status(403)
